--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
-    <link rel="stylesheet" href="css/style.min.css">
     <title>Pulse</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -114,7 +114,7 @@
         </div>
     </section>
 
-    <div class="carusel">
+    <section class="carusel">
         <div class="container">
             <div class="carusel__inner">
                 <div>
@@ -130,7 +130,7 @@
             <button type="button" class="prev"><img src="icons/arrows/chevron-left.svg" alt="prev"></button>
             <button type="button" class="next"><img src="icons/arrows/chevron-right.svg" alt="next"></button>
         </div>
-    </div>
+    </section>
 
     <section class="catalog" id="catalog">
         <div class="container">
